src/objects/ACCL__Order_Template__c.object
<CustomObject>
    <fields>
        <fullName>ACCL__Pricing_Type__c</fullName>
        <description>Defines the pricing type of the order template.</description>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Product_Check_In_Policy__c</fullName>
        <description>Defines if complete or partial product check in is required at the end of a tour.</description>
        <label>Product Check In Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Product_Selector_Groups__c</fullName>
        <description>Used for mobility</description>
        <label>Product Selector Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Basket</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Out of Stock</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Sub-Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Filter_Selection__c</fullName>
        <description>This field allows the user to select if the order will be loaded with a selected promotion by default.</description>
        <label>Promotion Filter Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>No Promotion</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>First Promotion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Finding_Date__c</fullName>
        <description>Controls which date is used for the product finding algorithms of promotion tactics.</description>
        <label>Promotion Finding Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InitiationDate</fullName>
                </value>
                <value>
                    <fullName>OrderDate</fullName>
                </value>
                <value>
                    <fullName>DeliveryDate</fullName>
                </value>
                <value>
                    <fullName>ListingDate</fullName>
                    <default>true</default>
                    <label>ListingDate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Finding__c</fullName>
        <description>Reference to the promotion finding template.</description>
        <label>Promotion Finding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Collection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Quantity_Rounding__c</fullName>
        <description>Quantity Rounding</description>
        <label>Quantity Rounding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Off</fullName>
                    <default>true</default>
                    <label>Off</label>
                </value>
                <value>
                    <fullName>RoundingDefaultOn</fullName>
                </value>
                <value>
                    <fullName>RoundingDefaultOff</fullName>
                </value>
                <value>
                    <fullName>RoundingAlwaysOn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Recalculation_Required__c</fullName>
        <description>Controls if forced recalculation is required in complex pricing if calculation date diverges from current date.</description>
        <label>Recalculation Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>YesNotify</fullName>
                </value>
                <value>
                    <fullName>AlwaysCalculate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Release_Platform__c</fullName>
        <description>Describes platform which can be used to release the Order referencing this template.</description>
        <label>Release Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Report__c</fullName>
        <description>Controls which type of report is used.</description>
        <label>Report</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Document_Assortment_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls, whether the sales document template assortment has to be considered when building and validating the disposal list or not.</description>
        <label>Sales Document Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Document_Assortment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls, whether the sales document template assortment is used for presetting the disposal list.

    - 0/No: The system doesn&apos;t consider any sales document template assortment.

    - 1/Yes: The system presets the disposal list subject to the sales document template assortment. All other template attributes for the disposal list control have to be considered also.</description>
        <label>Sales Document Assortment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the sales org which the order template belongs to.</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Selling_Assortment_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls ,whether the customer selling assortment has to be considered when validating the disposal list or not.

    No: The system doesn&apos;t consider any customer selling assortment.

    Yes: The system filters the disposal list subject to the customer selling assortment. The validation although checks the assignment of each product to the according assortment.</description>
        <label>Selling Assortment Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Signature_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to a signature template</description>
        <label>Signature Template</label>
        <referenceTo>ACCL__Signature_Template__c</referenceTo>
        <relationshipLabel>Order Templates</relationshipLabel>
        <relationshipName>Order_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Sort__c</fullName>
        <description>Position of this instance in overviews or toggles.</description>
        <label>Sort</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Special_Order_Handling__c</fullName>
        <description>To be used for complex pricing calculation</description>
        <label>Special Order Handling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>InclusiveSpecialOrder</fullName>
                    <label>Inclusive Special Order</label>
                </value>
                <value>
                    <fullName>ExclusiveSpecialOrder</fullName>
                    <label>Exclusive Special Order</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Special_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The ability to use the template together with talon tactics.</description>
        <label>Special Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Sync_Options__c</fullName>
        <description>Sync Options.</description>
        <label>Sync Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>ReleaseCancel</fullName>
                </value>
				<value>
                    <fullName>SendToSAPDeleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__System_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to System Number</description>
        <label>Mobile Number Definition</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__System_Number__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__System_Number__c</referenceTo>
        <relationshipLabel>Order Templates</relationshipLabel>
        <relationshipName>Order_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Transaction_Receiver__c</fullName>
        <description>The attribute specifies for whom inventory transactions will be written (e.g. for the initiator or the owner of the respective sales/inventory document).</description>
        <label>Transaction Receiver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiator</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Use_Built_In_Pricing__c</fullName>
        <description>Controls, whether the built in pricing is used or the whole pricing is done by a user exit.</description>
        <label>Use Built-In Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Use_Customer_Document_TA_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the handling type of the customer will be taken into account.</description>
        <label>Use Customer Document TA Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__User_Roles__c</fullName>
        <description>User roles assigned to the Order Template.
    NOTE: Please ensure the master picklist values exactly match Technical Name of the permission sets. Set the user value in Translation. (e.g. ACSF_Master_Data_Admin is the master picklist value, Master Data Admin is translated value).</description>
        <label>User Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACSF_Master_Data_Admin</fullName>
                </value>
                <value>
                    <fullName>ACSF_KAM</fullName>
                </value>
                <value>
                    <fullName>ACSF_Retail_Admin</fullName>
                </value>
                <value>
                    <fullName>ACSF_Sales_User</fullName>
                </value>
                <value>
                    <fullName>ACSF_Security_Admin</fullName>
                </value>
                <value>
                    <fullName>ACSF_Supervisor</fullName>
                </value>
                <value>
                    <fullName>ACSF_Tour_User</fullName>
                </value>
                <value>
                    <fullName>REX_Sales_Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>From this date on the entry is valid.</description>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Until this date the entry is valid.</description>
        <label>Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Wholesaler_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is a wholesaler or broker reference required for the sales documents of this template.</description>
        <label>Wholesaler Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Workflow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the workflow.</description>
        <label>Workflow</label>
        <referenceTo>ACCL__Workflow__c</referenceTo>
        <relationshipLabel>Order Templates</relationshipLabel>
        <relationshipName>Order_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>MDLZ_CanCreateOnDevice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify order templates that can be created on device</description>
        <label>Can Create on Device</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_Can_Create_On_Mobility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Create On Mobility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_IsCAOOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CAO Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_IsEDIOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is EDI Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_IsNOSOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is NOS Order</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>MDLZ_IsOrderWrapper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify the order wrapper template</description>
        <label>Is Order Wrapper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_IsPOD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify the order template that will be used for POD tasks</description>
        <label>Is POD</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>MDLZ_MOQCases__c</fullName>
        <label>MOQ Cases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_MOQ__c</fullName>
        <label>MOQ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>MDLZ_NotMobilityRelevantTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Mobility Relevant Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_Visible_On_Overview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible On Overview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MLZ_IsOrderTypeEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOrderTypeEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MLZ_UseAggregatedOrderUI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseAggregatedOrderUI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RE_Order_Template_ExternalID__c</fullName>
        <description>It contains unique value for external ID</description>
        <externalId>true</externalId>
        <label>RE_Order_Template_ExternalID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Order Template</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ACCL__Document_Type__c</columns>
        <columns>ACCL__Creation_Platform__c</columns>
        <columns>ACCL__Valid_From__c</columns>
        <columns>ACCL__Valid_Thru__c</columns>
        <columns>ACCL__Sort__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MDLZ_Order_Templates</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <columns>ACCL__Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Sales_Org__c</field>
            <operation>equals</operation>
            <value>US01</value>
        </filters>
        <label>MDLZ Order Templates</label>
    </listViews>
    <nameField>
        <label>Order Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Templates</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Cash_Document</fullName>
        <active>true</active>
        <label>Cash Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Order_Entry</fullName>
        <active>true</active>
        <label>Order Entry</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Truck_Load</fullName>
        <active>true</active>
        <label>Truck Load</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Check_If_Sales_Org_Is_Changed</fullName>
        <active>true</active>
        <description>The Sales Org can&apos;t be edited after Order Template creation.</description>
        <errorConditionFormula>ISCHANGED(ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Sales Org can&apos;t be edited after Order Template creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Inventory_Ref_Unique_Validation_Rule</fullName>
        <active>true</active>
        <description>Inventory Reference 1…5 can&apos;t have duplicate values.</description>
        <errorConditionFormula>IF(OR((NOT(ISBLANK(TEXT(ACCL__Inventory_Reference_1__c))) &amp;&amp;
    OR(TEXT(ACCL__Inventory_Reference_1__c)== TEXT(ACCL__Inventory_Reference_2__c),
    TEXT(ACCL__Inventory_Reference_1__c)== TEXT(ACCL__Inventory_Reference_3__c),
    TEXT(ACCL__Inventory_Reference_1__c)== TEXT(ACCL__Inventory_Reference_4__c),
    TEXT(ACCL__Inventory_Reference_1__c)== TEXT(ACCL__Inventory_Reference_5__c))),
    ((NOT(ISBLANK(TEXT(ACCL__Inventory_Reference_2__c))) &amp;&amp;
    OR(TEXT(ACCL__Inventory_Reference_2__c)== TEXT(ACCL__Inventory_Reference_3__c),
    TEXT(ACCL__Inventory_Reference_2__c)== TEXT(ACCL__Inventory_Reference_4__c),
    TEXT(ACCL__Inventory_Reference_2__c)==
    TEXT(ACCL__Inventory_Reference_5__c)))),
    ((NOT(ISBLANK(TEXT(ACCL__Inventory_Reference_3__c))) &amp;&amp;
    OR(TEXT(ACCL__Inventory_Reference_3__c)==
    TEXT(ACCL__Inventory_Reference_4__c),
    TEXT(ACCL__Inventory_Reference_3__c)==
    TEXT(ACCL__Inventory_Reference_5__c)))),
    ((NOT(ISBLANK(TEXT(ACCL__Inventory_Reference_4__c))) &amp;&amp; TEXT(ACCL__Inventory_Reference_4__c)==
    TEXT(ACCL__Inventory_Reference_5__c)))),true,false)</errorConditionFormula>
        <errorMessage>Inventory Reference 1…5 can&apos;t have duplicate values.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Lead_Time_Validation</fullName>
        <active>true</active>
        <description>The Min Lead Time can&apos;t be greater than the Max Lead Time.</description>
        <errorConditionFormula>ACCL__Max_Lead_Time__c &lt; ACCL__Min_Lead_Time__c</errorConditionFormula>
        <errorMessage>The Min Lead Time can&apos;t be greater than the Max Lead Time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__List_Option_For_Selectable_Promotion</fullName>
        <active>true</active>
        <description>List Option must be &apos;Flat List&apos; if the Order Template is relevant for Selectable Promotions.</description>
        <errorConditionFormula>AND(
          ACCL__Consider_Selectable_Promotion__c,
          NOT(ISPICKVAL(ACCL__List_Option__c, &apos;Flat List&apos;))	
        )</errorConditionFormula>
        <errorMessage>List Option must be &apos;Flat List&apos; if the Order Template is relevant for Selectable Promotions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Document_Filter_Validation</fullName>
        <active>true</active>
        <description>If Sales Document Filter is not activated, user should not be able to activate Sales Document Filter</description>
        <errorConditionFormula>IF(AND(ACCL__Sales_Document_Assortment__c = false, ACCL__Sales_Document_Assortment_Filter__c = true), true,false)</errorConditionFormula>
        <errorDisplayField>ACCL__Sales_Document_Assortment_Filter__c</errorDisplayField>
        <errorMessage>Enable Sales Document Assortment prior to activating Sales Document Filter.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same_for_Workflow</fullName>
        <active>true</active>
        <description>The Order Template and Workflow must have the same Sales Org.</description>
        <errorConditionFormula>NOT(ISBLANK(ACCL__Workflow__c)) &amp;&amp; TEXT( ACCL__Sales_Org__c ) &lt;&gt; TEXT( ACCL__Workflow__r.ACCL__Sales_Org__c )</errorConditionFormula>
        <errorMessage>The Order Template and Workflow must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Selling_Assortment_Filter_Validation</fullName>
        <active>true</active>
        <description>Selling Assortment Filter on Order Template can&apos;t be activated if the Customer Selling Assortment isn&apos;t activated.</description>
        <errorConditionFormula>IF(AND( ACCL__Customer_Selling_Assortment__c = false,  ACCL__Selling_Assortment_Filter__c = true), true,false)</errorConditionFormula>
        <errorDisplayField>ACCL__Selling_Assortment_Filter__c</errorDisplayField>
        <errorMessage>Selling Assortment Filter on Order Template can&apos;t be activated if the Customer Selling Assortment isn&apos;t activated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Valid_From_Valid_Thru_Validation</fullName>
        <active>true</active>
        <description>Valid From can&apos;t be later than Valid Thru.</description>
        <errorConditionFormula>ACCL__Valid_From__c &gt; ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>